--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,13 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+header{
+  width:980px;
+  height:140px;
+  background:#0D7962;
+  border:1px dashed white;
 }
+footer{
+  width:980px;
+  height:70px;
+  background:#0D7962;
+  border:1px dashed white;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
 }
